# CppDatabases

./: CMakeLists.txt  README.md
CMakeUtils/FindOrFetch/: FindDoNotFetchBoost.cmake  FindDoNotFetchMySql.cmake  FindOrFetchSoci.cmake
Code/Databases/: CMakeLists.txt
Code/Databases/hdr/: ConvertRecordTypes.hpp  Database.hpp  DatabaseMsSqlServer.hpp  DatabaseMySql.hpp  DatabasePostgreSql.hpp  DatabaseSqlite.hpp  TableRecords.hpp
Code/Databases/include/: Common.hpp  DatabaseApi.hpp
Code/Databases/src/: Database.cpp  DatabaseApi.cpp  DatabaseMsSqlServer.cpp  DatabaseMySql.cpp  DatabasePostgreSql.cpp  DatabaseSqlite.cpp  MainDatabase.cpp  TableRecords.cpp
Mock/Databases/src/: TestMockEntity.cpp
Mock/Gui/src/: TestMockEntity.cpp
Tests/: CMakeLists.txt
Tests/Unit/Databases/: CMakeLists.txt
Tests/Unit/Databases/src/: UnitTestDatabase.cpp
